# nn-nananana-ansatz

./: .gitignore  .pdm-python  README.md  pyproject.toml
-dep-v2/: __init__.py  _dev.py  hwat.py  model.py  systems.py  utils.py
-dep-v2/dep-v1/: README.md  app.py  dashboard.py  hwat.py  pyfig.py  run.py  wandb_analysis.ipynb
-dep-v2/dep-v1/things/: aesthetic.py  base.py  core.py  dist_repo.py  logger_repo.py  other_repo.py  sweep_repo.py  typfig.py  utils.py
-dep-v2/dep-v1/things/dashboard/: nb.ipynb
-dep-v2/dep-v1/things/for_jax/: utils.py
-dep-v2/dep-v1/things/for_qchem/: from_pyscf.py
-dep-v2/dep-v1/things/for_qchem/pyscf/: opt_geometry.py
-dep-v2/dep-v1/things/for_upgrade/: aot_compile.py  conjugate_gradient_optimizer.py  nn_graph_gpt.py  run_cg.py
nn_nananana_ansatz/: appfig.py  cli.py  hwat.py  systems.py  torch_utils.py  typer-cli.py  utils.py
nn_nananana_ansatz/pyfig/: -colors.css  __init__.py  bug.py  env_dist.py  files.py  log.py  paths.py  plugins.py  pretty.py  pydanmod.py  pyfig.py  schema.py  typfig.py  utils.py
nn_nananana_ansatz/pyfig/-dep/: base.py  core.py  logger_repo.py  other_repo.py  pyfig copy.py  resource_repo.py  submission_template.py  sweep_repo.py  utils.py
nn_nananana_ansatz/pyfig/-dep/dashboard/: d2.py  dashboard.py  nb.ipynb
nn_nananana_ansatz/pyfig/-dep/for_jax/: jax_utils.py  nn_base.py
nn_nananana_ansatz/pyfig/-dep/for_qchem/: nn_pyscf.py
nn_nananana_ansatz/pyfig/-dep/for_torch/: torch_utils.py
scripts/: appfig.py  env.env  env.py  lightning.py  main.ipynb
(+34 files in other folders)
