
[project]
name = "nn-nananana-ansatz"
version = "0.1.0"
description = "qmc with nn ansatz"
authors = [
    {name = "M", email = "amawi@dtu.dk"},
]
dependencies = [
    "torch>=2.0.1",
    "wandb>=0.15.3",
    "simple-slurm>=0.2.6",
    "paramiko>=3.2.0",
    "notebook>=6.5.4",
    "ipykernel>=6.23.1",
    "matplotlib>=3.7.1",
    "optree>=0.9.1",
    "torch-tb-profiler>=0.4.1",
    "prettytable>=3.7.0",
    "accelerate>=0.19.0",
    "optuna>=3.2.0",
    "pyscf>=2.2.1",
    "torch-optimizer>=0.3.0",
    "rich>=13.4.1",
    "pydantic[dotenv]>=1.10.8",
    "loguru>=0.7.0",
    "typer>=0.9.0",
    "tabulate>=0.9.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Licensed."}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts] # remove in deepnote
post_install = "pdm run python -m ipykernel install --name 'nnansatz' --user"

[[tool.pdm.source]]
type = "index"
url = "https://download.pytorch.org/whl/cu118"
name = "torch"